ui: fix for header alignment and journal pagination
* ref: cern-sis/issues-inspire#163 and cern-sis/issues-inspire#164

--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -224,10 +224,13 @@ body {
 
 // page header with smaller inline subtitle (like in JournalItem)
 .ant-page-header.site-page-header.ant-page-header-ghost {
-  padding: 4px 0;
-  .ant-page-header-heading-title {
-    font-weight: 500;
-    font-size: 18px;
-    padding-right: 5px;
+  padding: 0;
+  .ant-page-header-heading-left {
+    margin: 0;
+    .ant-page-header-heading-title {
+      font-weight: 500;
+      font-size: 18px;
+      padding-right: 5px;
+    }
   }
 }
