--- a/ui/src/common/layouts/Header/HeaderMenu.less
+++ b/ui/src/common/layouts/Header/HeaderMenu.less
@@ -1,5 +1,6 @@
 .__HeaderMenu__ {
   text-align: right;
+  justify-content: flex-end;
 }
 
 // `header-submenu` is not nested inside `__HeaderMenu`
